--- a/app/view/crm/company/own.html
+++ b/app/view/crm/company/own.html
@@ -1,4 +1,5 @@
 <input type="hidden" id="companyidInput" />
+<input type="hidden" id="companyInput" />
 <input type="hidden" id="companyownidInput" />
 <div class="inputarea">
   <div class="inputgroup">
