Neues Webinterface Aufträge fertig gestellt

--- a/app/styles/weblet/allg/menu/menu.css
+++ b/app/styles/weblet/allg/menu/menu.css
@@ -71,6 +71,10 @@ div.menuopen > div.menumain {
 /* tree                                                                       */
 /* ========================================================================== */
 
+div.treemain {
+	line-height: initial;
+}
+
 div.treelink + div.treemain {
 	margin-left: 1em;
 }
