--- a/app/view/basic/view.html
+++ b/app/view/basic/view.html
@@ -7,4 +7,4 @@
     <div id="fullscreenButton" class="button fullscreen"></div>
   </div>
 </div>
-<div id="webletmain" class="webletmain"><div id="buttonContainer"></div><div id="contentContainer"></div></div>
+<div id="webletmain" class="webletmain"><div id="buttonFrame"><div id="buttonContainer"></div></div><div id="contentContainer"></div></div>
