--- a/app/styles/basic/variable.css
+++ b/app/styles/basic/variable.css
@@ -39,6 +39,7 @@
 	--inputcolorlight: #a0a0a0;
 	
 	--darkcolor1: #729fcf;
+	--rdarkcolor1: #fff;
 
 	--lightcolor1: #aaccff;
 	--lightcolor2: #eaeaff;
