Neues Interface Warehouse fertiggestellt

--- a/app/styles/basic/class.css
+++ b/app/styles/basic/class.css
@@ -15,6 +15,10 @@
 	vertical-align: top;
 }
 
+.head {
+	font-weight: bold;
+}
+
 .disable-select {
     user-select: none; /* supported by Chrome and Opera */
    -webkit-user-select: none; /* Safari */
