--- a/app/view/dbadmin/procedure/detail.html
+++ b/app/view/dbadmin/procedure/detail.html
@@ -4,9 +4,9 @@
 <span id="textInput" class="hidden ele-wrapper" data-hidden=true aria-multiline=true></span>
 <div class="inputarea fullheight">
   <div class="inputgroup">
-    <div class=inputsingle><span id="schemaLabel"></span><span id="schemaInput" ></span></div>
-    <div class=inputsingle><span id="fullnameLabel"></span><span id="fullnameInput"></span></div>
-    <div class=inputsingle><span id="rettypeLabel"></span><span id="rettypeInput"></span></div>
+    <div class=inputsingle><span id="schemaLabel"></span><input id="schemaInput" /></div>
+    <div class=inputsingle><span id="fullnameLabel"></span><input id="fullnameInput"/></div>
+    <div class=inputsingle><span id="rettypeLabel"></span><input id="rettypeInput"/></div>
     <div class=inputsingle><span id="asownerLabel"></span><input type="checkbox" id="asownerInput"/></div>
     <div class=inputsingle><span id="ownernameLabel"></span><span id="ownernameOutput"></span></div>
     <div class=inputsingle><span id="provolatileLabel"></span><select id="provolatileInput"></select></div>
