--- a/app/view/allg/user/settings.html
+++ b/app/view/allg/user/settings.html
@@ -12,5 +12,6 @@
     <div class='inputsingle'><span id="countrycarcodeLabel"></span><input id="countrycarcodeInput" /></div>
     <div class='inputsingle'><span id="stylenameLabel"></span><select id="stylenameInput"></select></div>
     <div class='inputsingle'><span id="startwebletLabel"></span><span id="startwebletnameOutput"></span></div>
+    <div class='inputsingle'><span id="exportencodingLabel"></span><select id="exportencodingInput"></select></div>
   </div>
 </div>
