--- a/app/view/basic/view.html
+++ b/app/view/basic/view.html
@@ -1,7 +1,7 @@
-<div id="titleContainer" class="weblettitle">
-  <div id="weblettitleleft"    class="weblettitlearea weblettitleleft"></div>
-  <div id="weblettitlemiddle"  class="weblettitlearea weblettitlemiddle"></div>
-  <div id="weblettitleright"   class="weblettitlearea weblettitleright">
+<div id="titleContainer" class="title">
+  <div id="titletext"    class="titlearea titleleft"></div>
+  <div id="titlemiddle"  class="titlearea titlemiddle"></div>
+  <div id="titlebutton"  class="titlearea titleright">
     <div id="queryButton"      class="button query debug"></div>
     <div id="reloadButton"     class="button reload debug"></div>
     <div id="fullscreenButton" class="button fullscreen"></div>
