--- a/app/styles/weblet/basic/element.css
+++ b/app/styles/weblet/basic/element.css
@@ -70,14 +70,14 @@ span.hint {
     display: inline-block;
     left: 20px;
     bottom: 0px;
-    translate: 0 100%;
+    transform: translate(0px, 100%);
     border: var(--border);
     border-width: 2px;
     box-shadow: 0px 0px 12px;
     padding: var(--margin);
     line-height: initial;
     background: var(--background);
-    border-radius: calc(2*var(--borderradius));
+    border-radius: calc(1.5*var(--borderradius));
     padding-top: 0px;
     padding-bottom: 0px;
     white-space: nowrap;
