--- a/app/view/allg/filesystem/treeedit.html
+++ b/app/view/allg/filesystem/treeedit.html
@@ -1,6 +1,8 @@
+<input id="dirInput" type="hidden">
 <div class="inputarea">
   <div class="inputgroup">
-    <div class="inputsingle"><span class="label">#mne_lang#Ordner/Datei</span><span id="dirOutput"></span></div>
+    <div class="inputsingle"><span class="label">#mne_lang#Ordner</span><span id="diroldOutput"></span></div>
+    <div class="inputsingle nameold"><span class="label">#mne_lang#Alter Name</span><span id="nameoldOutput"></span></div>
     <div class="inputsingle nameinput"><span class="label">#mne_lang#Name</span><input id="nameInput" /> </div>
     <div class="inputsingle namefile"><span class="label">#mne_lang#Datei</span><input type='file' id="nameFile" /> </div>
     <div class="inputsingle"><span class="label">#mne_lang#Überschreiben</span><input type='checkbox' id="overwriteInput" /> </div>
